add full xfce suites profile

--- a/isodvd/profiles/debian-cn.build.conf
+++ b/isodvd/profiles/debian-cn.build.conf
@@ -5,7 +5,7 @@ mirror_components_extra="main non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/debian-cn-archive-buster-stable.gpg 
 
 
-profiles="debian-cn-xfce-mini-i386 txt-tech" 
+profiles="txt-tech debian-cn-xfce-mini-i386 debian-cn-xfce" 
 #auto_profiles=t
 build_profiles="debian-cn.build"
 
