让安装界面显示对齐

--- a/isodvd/profiles/debian-cn.build.conf
+++ b/isodvd/profiles/debian-cn.build.conf
@@ -5,10 +5,8 @@ mirror_components_extra="main non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/debian-cn-archive-buster-stable.gpg 
 
 
-profiles="txt-tech debian-cn-xfce-mini-i386 debian-cn-xfce" 
-#auto_profiles=t
+profiles="debian-cn-txt-tech debian-cn-xfce-mini-i386 debian-cn-xfce" 
 build_profiles="debian-cn.build"
 
 BOOT_TIMEOUT=50
-export DISKINFO="Debian-cn GNU/Linux 10 buster 20191030"
-#export KERNEL_PARAMS="preseed/file=/cdrom/simple-cdd/t.preseed"
+export DISKINFO="Debian-cn GNU/Linux 10 buster 20191031"
