--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -5,8 +5,7 @@ mirror_components_extra="main non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/debian-cn-archive-buster-stable.gpg 
 
 
-#profiles="debian-cn-all-txt-tech debian-cn-amd64-xfce-full" 
-profiles="t"
+profiles="debian-cn-all-txt-tech debian-cn-amd64-xfce-full debian-cn-amd64-xall-full" 
 build_profiles="adm64.build"
 
 BOOT_TIMEOUT=50
