--- a/isodvd/profiles/debian-cn.build.conf
+++ b/isodvd/profiles/debian-cn.build.conf
@@ -5,7 +5,8 @@ mirror_components_extra="main non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/debian-cn-archive-buster-stable.gpg 
 
 
-profiles="debian-cn-all-txt-tech debian-cn-i386-xfce-mini debian-cn-i386-xfce-full" 
+#profiles="debian-cn-all-txt-tech debian-cn-i386-xfce-mini debian-cn-i386-xfce-full" 
+profiles="t"
 build_profiles="debian-cn.build"
 
 BOOT_TIMEOUT=50
