构建脚本更新配置文件名

--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -5,9 +5,9 @@ mirror_components_extra="main non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/debian-cn-archive-buster-stable.gpg 
 
 
-profiles="debian-cn-all-txt-tech debian-cn-amd64-xfce-full debian-cn-amd64-xall-full" 
+profiles="debian-cn-all-txt-tech debian-cn-amd64-xfce debian-cn-amd64-xall" 
 build_profiles="adm64.build"
 
 BOOT_TIMEOUT=50
-export DISKINFO="Debian-cn GNU/Linux 10.1 buster 20191102"
+export DISKINFO="Debian-cn GNU/Linux 10.1 buster 20191103"
 export DEBFULLNAME='肖盛文'
