--- a/isodvd/profiles/i386.build.conf
+++ b/isodvd/profiles/i386.build.conf
@@ -5,9 +5,8 @@ mirror_components_extra="main non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/debian-cn-archive-buster-stable.gpg 
 
 
-#profiles="debian-cn-all-txt-tech debian-cn-i386-xfce-mini debian-cn-i386-xfce-full" 
-profiles="t"
-build_profiles="debian-cn.build"
+profiles="debian-cn-all-txt-tech debian-cn-i386-xfce-mini debian-cn-i386-xfce" 
+build_profiles="i386.build"
 
 BOOT_TIMEOUT=50
 export DISKINFO="Debian-cn GNU/Linux 10 buster 20191031"
