--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -1,13 +1,13 @@
 mirror_components="main contrib non-free"
 
 debian_mirror_extra="http://cdtxy/debian/"
-mirror_components_extra="main non-free"
+mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/debian-cn-archive-buster-stable.gpg 
 
 
 profiles="debian-cn-all-txt-tech debian-cn-amd64-xfce debian-cn-amd64-xall" 
-build_profiles="adm64.build"
 
 BOOT_TIMEOUT=50
 export DISKINFO="Debian-cn GNU/Linux 10.1 buster 20191105"
 export DEBFULLNAME='肖盛文'
+export ARCHES="amd64 i386"
