--- a/isodvd/profiles/all.build.conf
+++ b/isodvd/profiles/all.build.conf
@@ -1,7 +1,7 @@
 mirror_components="main contrib non-free"
 
-#debian_mirror_extra="http://cdtxy/debian/"
-debian_mirror_extra="http://cdtxylan/debian/"
+debian_mirror_extra="http://cdtxy/debian/"
+#debian_mirror_extra="http://cdtxylan/debian/"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/debian-cn-archive-buster-stable.gpg 
 
