--- a/isodvd/profiles/amd64-xall.build.conf
+++ b/isodvd/profiles/amd64-xall.build.conf
@@ -1,12 +1,12 @@
 mirror_components="main contrib non-free"
 
-debian_mirror_extra="http://cdtxylan/debian/"
+debian_mirror_extra="http://118.24.9.73/debian/"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/debian-cn-archive-buster-stable.gpg 
 
 profiles="debian-cn-amd64-xall" 
 
 BOOT_TIMEOUT=50
-export DISKINFO="Debian-cn GNU/Linux 10.1 buster 20191107"
+export DISKINFO="Debian-cn GNU/Linux 10.1 buster 20191108"
 export DEBFULLNAME='肖盛文'
 export ARCHES="amd64"
