增加 jindo 模板文件

--- a/isodvd/profiles/amd64-xall.build.conf
+++ b/isodvd/profiles/amd64-xall.build.conf
@@ -10,3 +10,5 @@ BOOT_TIMEOUT=50
 export DISKINFO="Debian-cn GNU/Linux 10.1 buster 20191108"
 export DEBFULLNAME='肖盛文'
 export ARCHES="amd64"
+export MAXJIGDOS=ALL
+export CHECKSUMS="md5 sha1 sha512 sha256"
