--- a/isodvd/profiles/amd64-xall.build.conf
+++ b/isodvd/profiles/amd64-xall.build.conf
@@ -7,8 +7,9 @@ keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/de
 profiles="debian-cn-amd64-xall" 
 
 BOOT_TIMEOUT=50
-export DISKINFO="Debian-cn GNU/Linux 10.1 buster 20191108"
+export DISKINFO="Debian-cn GNU/Linux 10.2 buster 20191112"
 export DEBFULLNAME='肖盛文'
 export ARCHES="amd64"
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
+export ARCHES="amd64 i386"
