更新 10.2 版本信息

--- a/isodvd/profiles/amd64-xall.build.conf
+++ b/isodvd/profiles/amd64-xall.build.conf
@@ -1,6 +1,5 @@
 mirror_components="main contrib non-free"
 
-#debian_mirror_extra="http://118.24.9.73/debian/"
 debian_mirror_extra="http://debian-cn.lilishare.com/debian/"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/debian-cn-archive-buster-stable.gpg 
@@ -8,9 +7,10 @@ keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/de
 profiles="debian-cn-amd64-xall" 
 
 BOOT_TIMEOUT=50
-export DISKINFO="Debian-cn GNU/Linux 10.2 buster 20191124"
+export DISKINFO="Debian-cn GNU/Linux 10.2 buster 20191126"
 export DEBFULLNAME='肖盛文'
 export ARCHES="amd64"
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
+export DEBVERSION="10.2.0"
