更新相关域名到 atzlinux.com

--- a/isodvd/profiles/amd64-xall.build.conf
+++ b/isodvd/profiles/amd64-xall.build.conf
@@ -1,6 +1,6 @@
 mirror_components="main contrib non-free"
 
-debian_mirror_extra="http://debian-cn.lilishare.com/debian/"
+debian_mirror_extra="http://www.atzlinux.com/debian/"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/debian-cn-archive-buster-stable.gpg 
 
