命令行:增加 deb 制作相关软件包

--- a/isodvd/profiles/amd64-xall.build.conf
+++ b/isodvd/profiles/amd64-xall.build.conf
@@ -1,13 +1,13 @@
 mirror_components="main contrib non-free"
 
-debian_mirror_extra="http://www.atzlinux.com/debian/"
+debian_mirror_extra="https://www.atzlinux.com/debian/"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/debian-cn-archive-buster-stable.gpg 
 
 profiles="debian-cn-amd64-xall" 
 
-BOOT_TIMEOUT=50
-export DISKINFO="Debian-cn GNU/Linux 10.2.1 buster 20191205"
+BOOT_TIMEOUT=28
+export DISKINFO="Debian-cn GNU/Linux 10.2.1 buster 20191211"
 export DEBFULLNAME='肖盛文'
 export ARCHES="amd64"
 export MAXJIGDOS=ALL
