命令行:增加 myrepos 软件包

--- a/isodvd/profiles/all-txt-tech.build.conf
+++ b/isodvd/profiles/all-txt-tech.build.conf
@@ -1,7 +1,7 @@
 mirror_components="main contrib non-free"
 
-#debian_mirror_extra="https://www.atzlinux.com/debian"
-debian_mirror_extra="http://cdtxylan/debian/"
+debian_mirror_extra="https://www.atzlinux.com/debian"
+#debian_mirror_extra="http://cdtxylan/debian/"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/debian-cn-archive-buster-stable.gpg 
 
@@ -13,5 +13,4 @@ export DEBFULLNAME='肖盛文'
 export ARCHES="amd64"
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
-mirror_components="main contrib non-free"
 export DEBVERSION="10.2.1"
