--- a/isodvd/profiles/all-txt-tech.build.conf
+++ b/isodvd/profiles/all-txt-tech.build.conf
@@ -1,15 +1,15 @@
 mirror_components="main contrib non-free"
 
-debian_mirror_extra="https://www.atzlinux.com/debian"
+debian_mirror_extra="https://apt.atzlinux.com/debian"
 mirror_components_extra="main contrib non-free"
-keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/debian-cn-archive-buster-stable.gpg 
+keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
 
 profiles="debian-cn-all-txt-tech"
 
 BOOT_TIMEOUT=28
-export DISKINFO="atzlinux all txt 10.2.1 buster 20191216"
+export DISKINFO="atzlinux all txt 10.2.2 buster 20200129"
 export DEBFULLNAME='肖盛文'
 export ARCHES="amd64"
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
-export DEBVERSION="10.2.1"
+export DEBVERSION="10.2.2"
