--- a/isodvd/profiles/amd64-xall.build.conf
+++ b/isodvd/profiles/amd64-xall.build.conf
@@ -7,10 +7,9 @@ keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/de
 profiles="debian-cn-amd64-xall" 
 
 BOOT_TIMEOUT=28
-export DISKINFO="Debian-cn GNU/Linux 10.2.1 buster 20200109"
+export DISKINFO="atzlinux 10.3.0 buster 20200210"
 export DEBFULLNAME='肖盛文'
-export ARCHES="amd64"
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
-export DEBVERSION="10.2.1"
+export DEBVERSION="10.3.0"
