--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -1,13 +1,14 @@
 mirror_components="main contrib non-free"
 
-debian_mirror_extra="http://cdtxy/debian/"
+debian_mirror_extra="https://www.atzlinux.com/debian/"
 mirror_components_extra="main contrib non-free"
-keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/debian-cn-archive-buster-stable.gpg 
+keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
 
+profiles="debian-cn-amd64-xall debian-cn-amd64-xfce debian-cn-amd64-xfce-mini debian-cn-all-txt-tech"
 
-profiles="debian-cn-all-txt-tech debian-cn-amd64-xfce debian-cn-amd64-xall" 
-
-BOOT_TIMEOUT=50
-export DISKINFO="Debian-cn GNU/Linux 10.1 buster 20191106"
+BOOT_TIMEOUT=28
+export DISKINFO="Debian-cn GNU/Linux 10.3 buster 20200210"
 export DEBFULLNAME='肖盛文'
-export ARCHES="amd64 i386"
+export MAXJIGDOS=ALL
+export ARCHES="amd64"
+export DEBVERSION="10.3.0"
