-orage -orage-data

--- a/isodvd/profiles/all.build.conf
+++ b/isodvd/profiles/all.build.conf
@@ -7,6 +7,6 @@ keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/at
 profiles="debian-cn-all-txt-tech debian-cn-i386-xfce debian-cn-amd64-xfce debian-cn-amd64-xall" 
 
 BOOT_TIMEOUT=50
-export DISKINFO="Debian-cn GNU/Linux 10.2.1 buster 20191205"
+export DISKINFO="atzlinux 10.3.0 buster 20200221"
 export DEBFULLNAME='肖盛文'
-export ARCHES="amd64 i386"
+export ARCHES="amd64"
