--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -4,10 +4,10 @@ debian_mirror_extra="https://www.atzlinux.com/debian/"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
 
-profiles="debian-cn-amd64-xall debian-cn-amd64-xfce debian-cn-amd64-xfce-mini debian-cn-all-txt-tech"
+profiles="debian-cn-amd64-xfce-mini debian-cn-amd64-xfce debian-cn-amd64-xall"
 
 BOOT_TIMEOUT=28
-export DISKINFO="Debian-cn GNU/Linux 10.3 buster 20200210"
+export DISKINFO="atzlinux 10.3 buster 20200221"
 export DEBFULLNAME='肖盛文'
 export MAXJIGDOS=ALL
 export ARCHES="amd64"
