--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -4,11 +4,13 @@ debian_mirror_extra="https://www.atzlinux.com/debian/"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
 
-profiles="debian-cn-amd64-xfce-mini debian-cn-amd64-xfce debian-cn-amd64-xall"
+profiles="debian-cn-all-txt-tech debian-cn-amd64-xfce-mini debian-cn-amd64-xfce debian-cn-amd64-xall"
+auto-profiles="debian-cn-amd64-xfce"
 
 BOOT_TIMEOUT=28
-export DISKINFO="atzlinux 10.3 buster 20200221"
+export DISKINFO="atzlinux 10.3 buster 20200223"
 export DEBFULLNAME='肖盛文'
 export MAXJIGDOS=ALL
+export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
 export DEBVERSION="10.3.0"
