--- a/isodvd/profiles/amd64-xfce-mini.build.conf
+++ b/isodvd/profiles/amd64-xfce-mini.build.conf
@@ -2,7 +2,7 @@ mirror_components="main contrib non-free"
 
 debian_mirror_extra="https://www.atzlinux.com/debian"
 mirror_components_extra="main contrib non-free"
-keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/debian-cn-archive-buster-stable.gpg 
+keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg 
 
 profiles="debian-cn-amd64-xfce-mini" 
 
