--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -5,6 +5,7 @@ mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
 
 profiles="debian-cn-all-txt-tech debian-cn-amd64-xfce-mini debian-cn-amd64-xfce debian-cn-amd64-xall"
+default_profiles='debian-cn-amd64-xfce'
 
 BOOT_TIMEOUT=28
 export DISKINFO="atzlinux 10.3.1 buster 20200226"
