--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -6,11 +6,30 @@ keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/at
 
 profiles="debian-cn-all-txt-tech debian-cn-amd64-xfce-mini debian-cn-amd64-xfce debian-cn-amd64-xall"
 default_profiles='debian-cn-amd64-xfce'
+clean_mirror='1'
+kernel_packages='linux-image-rt-amd64'
 
 BOOT_TIMEOUT=28
-export DISKINFO="atzlinux 10.3.1 buster 20200226"
+export DISKINFO="atzlinux 10.3.2 buster 20200302"
 export DEBFULLNAME='肖盛文'
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
-export DEBVERSION="10.3.1"
+export DEBVERSION="10.3.2"
+export CDNAME="atzlinux"
+
+# Set to 1 to save space by omitting the installation manual.
+# If so the README will link to the manual on the web site.
+export OMIT_MANUAL=1
+
+# Set to 1 to save space by omitting the release notes
+# If so we will link to them on the web site.
+export OMIT_RELEASE_NOTES=1
+
+# Set this to override the default location
+export RELEASE_NOTES_LOCATION="https://www.atzlinux.com/debian/download/changelog.txt"
+
+# Set to 1 to not include the doc/tools directories on CD1
+# Useful to save space and avoids failures if you have a mirror
+# without those directories.
+export OMIT_DOC_TOOLS=1
