--- a/isodvd/profiles/all-txt-tech.build.conf
+++ b/isodvd/profiles/all-txt-tech.build.conf
@@ -1,15 +1,37 @@
 mirror_components="main contrib non-free"
 
-debian_mirror_extra="https://apt.atzlinux.com/debian"
+debian_mirror_extra="https://www.atzlinux.com/debian/"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
 
 profiles="debian-cn-all-txt-tech"
+default_profiles='debian-cn-all-txt-tech'
+kernel_packages='linux-image-rt-amd64'
+
+backports="true"
+backports_packages='firmware-iwlwifi, firmware-linux-nonfree, firmware-amd-graphics, firmware-misc-nonfree, firmware-realtek'
 
 BOOT_TIMEOUT=28
-export DISKINFO="atzlinux all txt 10.2.2 buster 20200129"
+export DISKINFO="atzlinux 10.3.3 buster 20200310"
 export DEBFULLNAME='肖盛文'
-export ARCHES="amd64"
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
-export DEBVERSION="10.2.2"
+export ARCHES="amd64"
+export DEBVERSION="10.3.3"
+export CDNAME="atzlinux"
+
+# Set to 1 to save space by omitting the installation manual.
+# If so the README will link to the manual on the web site.
+export OMIT_MANUAL=1
+
+# Set to 1 to save space by omitting the release notes
+# If so we will link to them on the web site.
+export OMIT_RELEASE_NOTES=1
+
+# Set this to override the default location
+export RELEASE_NOTES_LOCATION="https://www.atzlinux.com/debian/download/changelog.txt"
+
+# Set to 1 to not include the doc/tools directories on CD1
+# Useful to save space and avoids failures if you have a mirror
+# without those directories.
+export OMIT_DOC_TOOLS=1
