add backports firmware

--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -8,13 +8,16 @@ profiles="debian-cn-all-txt-tech debian-cn-amd64-xfce-mini debian-cn-amd64-xfce 
 default_profiles='debian-cn-amd64-xfce'
 kernel_packages='linux-image-rt-amd64'
 
+backports="true"
+backports_packages='firmware-iwlwifi, firmware-linux-nonfree, firmware-amd-graphics, firmware-misc-nonfree, firmware-realtek'
+
 BOOT_TIMEOUT=28
-export DISKINFO="atzlinux 10.3.2 buster 20200304"
+export DISKINFO="atzlinux 10.3.3 buster 20200310"
 export DEBFULLNAME='肖盛文'
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
-export DEBVERSION="10.3.2"
+export DEBVERSION="10.3.3"
 export CDNAME="atzlinux"
 
 # Set to 1 to save space by omitting the installation manual.
