add backports firmware

--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -9,7 +9,7 @@ default_profiles='debian-cn-amd64-xfce'
 kernel_packages='linux-image-rt-amd64'
 
 backports="true"
-backports_packages='firmware-iwlwifi, firmware-linux-nonfree, firmware-amd-graphics, firmware-misc-nonfree, firmware-realtek'
+backports_packages='amd64-microcode, firmware-amd-graphics, firmware-iwlwifi, firmware-linux-free, firmware-linux-nonfree, firmware-misc-nonfree, firmware-realtek, intel-microcode'
 
 BOOT_TIMEOUT=28
 export DISKINFO="atzlinux 10.3.3 buster 20200310"
