--- a/isodvd/profiles/all-txt-tech.build.conf
+++ b/isodvd/profiles/all-txt-tech.build.conf
@@ -4,15 +4,15 @@ debian_mirror_extra="https://www.atzlinux.com/debian/"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
 
-profiles="debian-cn-all-txt-tech"
-default_profiles='debian-cn-all-txt-tech'
+profiles="atzlinux-all-txt-tech"
+default_profiles='atzlinux-all-txt-tech'
 kernel_packages='linux-image-rt-amd64'
 
 backports="true"
 backports_packages='firmware-iwlwifi, firmware-linux-nonfree, firmware-amd-graphics, firmware-misc-nonfree, firmware-realtek'
 
 BOOT_TIMEOUT=28
-export DISKINFO="atzlinux 10.3.3 buster 20200310"
+export DISKINFO="atzlinux 10.3.3 buster 20200328"
 export DEBFULLNAME='肖盛文'
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
