--- a/isodvd/profiles/amd64-xall.build.conf
+++ b/isodvd/profiles/amd64-xall.build.conf
@@ -4,7 +4,7 @@ debian_mirror_extra="https://www.atzlinux.com/debian/"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg 
 
-profiles="debian-cn-amd64-xall" 
+profiles="atzlinux-amd64-xall" 
 
 BOOT_TIMEOUT=28
 export DISKINFO="atzlinux 10.3.0 buster 20200210"
