--- a/isodvd/profiles/amd64-xfce.build.conf
+++ b/isodvd/profiles/amd64-xfce.build.conf
@@ -4,7 +4,7 @@ debian_mirror_extra="https://www.atzlinux.com/debian"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg 
 
-profiles="debian-cn-amd64-xfce" 
+profiles="atzlinux-amd64-xfce" 
 
 BOOT_TIMEOUT=50
 export DISKINFO="atzlinux amd64 xfce 10.2.1 buster 20191208"
