--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -4,8 +4,8 @@ debian_mirror_extra="https://www.atzlinux.com/debian/"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
 
-profiles="debian-cn-all-txt-tech debian-cn-amd64-xfce-mini debian-cn-amd64-xfce debian-cn-amd64-xall"
-default_profiles='debian-cn-amd64-xfce'
+profiles="atzlinux-all-txt-tech debian-cn-amd64-xfce-mini debian-cn-amd64-xfce debian-cn-amd64-xall"
+default_profiles='atzlinux-amd64-xfce'
 kernel_packages='linux-image-rt-amd64'
 
 backports="true"
