--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -1,6 +1,6 @@
 mirror_components="main contrib non-free"
 
-debian_mirror_extra="https://www.atzlinux.com/atzlinux/"
+debian_mirror_extra="https://apt.atzlinux.com/atzlinux/"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
 
@@ -12,7 +12,7 @@ backports="true"
 backports_packages='amd64-microcode, firmware-amd-graphics, firmware-iwlwifi, firmware-linux-free, firmware-linux-nonfree, firmware-misc-nonfree, firmware-realtek, intel-microcode'
 
 BOOT_TIMEOUT=28
-export DISKINFO="atzlinux 10.3.3 buster 20200412"
+export DISKINFO="atzlinux 10.3.3 buster 20200413"
 export DEBFULLNAME='肖盛文'
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
