--- a/isodvd/profiles/all-txt-tech.build.conf
+++ b/isodvd/profiles/all-txt-tech.build.conf
@@ -1,6 +1,6 @@
 mirror_components="main contrib non-free"
 
-debian_mirror_extra="https://www.atzlinux.com/debian/"
+debian_mirror_extra="https://apt.atzlinux.com/debian/"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
 
@@ -12,12 +12,12 @@ backports="true"
 backports_packages='firmware-iwlwifi, firmware-linux-nonfree, firmware-amd-graphics, firmware-misc-nonfree, firmware-realtek'
 
 BOOT_TIMEOUT=28
-export DISKINFO="atzlinux 10.3.3 buster 20200328"
+export DISKINFO="atzlinux 10.3.4 buster 20200504"
 export DEBFULLNAME='肖盛文'
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
-export DEBVERSION="10.3.3"
+export DEBVERSION="10.3.4"
 export CDNAME="atzlinux"
 
 # Set to 1 to save space by omitting the installation manual.
