--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -9,7 +9,10 @@ default_profiles='atzlinux-amd64-xfce'
 kernel_packages='linux-image-rt-amd64'
 
 backports="true"
-backports_packages='amd64-microcode, firmware-amd-graphics, firmware-iwlwifi, firmware-linux-free, firmware-linux-nonfree, firmware-misc-nonfree, firmware-realtek, intel-microcode'
+backports_packages='amd64-microcode, firmware-amd-graphics, firmware-iwlwifi, firmware-linux-free, firmware-linux-nonfree, firmware-misc-nonfree, firmware-realtek, intel-microcode,
+lintian,
+debhelper,
+tlp'
 
 BOOT_TIMEOUT=28
 export DISKINFO="atzlinux 10.4.1 buster 20200612"
