--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -10,6 +10,7 @@ kernel_packages='linux-image-rt-amd64'
 
 backports="true"
 backports_packages='amd64-microcode, firmware-amd-graphics, firmware-iwlwifi, firmware-linux-free, firmware-linux-nonfree, firmware-misc-nonfree, firmware-realtek, intel-microcode,
+firmware-brcm80211,
 libdebhelper-perl,
 lintian,
 debhelper,
