--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -18,12 +18,12 @@ debhelper,
 tlp'
 
 BOOT_TIMEOUT=28
-export DISKINFO="atzlinux 10.5.1 buster 20200803"
+export DISKINFO="atzlinux 10.6.1 buster 20200926"
 export DEBFULLNAME='肖盛文'
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
-export DEBVERSION="10.5.1"
+export DEBVERSION="10.6.1"
 export CDNAME="atzlinux"
 
 # Set to 1 to save space by omitting the installation manual.
@@ -35,7 +35,7 @@ export OMIT_MANUAL=1
 export OMIT_RELEASE_NOTES=1
 
 # Set this to override the default location
-export RELEASE_NOTES_LOCATION="https://www.atzlinux.com/debian/download/changelog.txt"
+export RELEASE_NOTES_LOCATION="https://www.atzlinux.com/News/"
 
 # Set to 1 to not include the doc/tools directories on CD1
 # Useful to save space and avoids failures if you have a mirror
