--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -41,3 +41,5 @@ export RELEASE_NOTES_LOCATION="https://www.atzlinux.com/News/"
 # Useful to save space and avoids failures if you have a mirror
 # without those directories.
 export OMIT_DOC_TOOLS=1
+
+export DISKINFO_DISTRO="atzlinux"
