+export VOLID_BASE="atzlinux "

--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -43,3 +43,4 @@ export RELEASE_NOTES_LOCATION="https://www.atzlinux.com/News/"
 export OMIT_DOC_TOOLS=1
 
 export DISKINFO_DISTRO="atzlinux"
+export VOLID_BASE="atzlinux $DEBVERSION"
