--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -15,15 +15,17 @@ firmware-libertas,
 libdebhelper-perl,
 lintian,
 debhelper,
+e2fslibs,
+libcomerr2,
 tlp'
 
 BOOT_TIMEOUT=28
-export DISKINFO="atzlinux 10.6.1 buster 20200930"
+export DISKINFO="atzlinux 10.6.2 buster 20201010"
 export DEBFULLNAME='肖盛文'
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
-export DEBVERSION="10.6.1"
+export DEBVERSION="10.6.2"
 export CDNAME="atzlinux"
 
 # Set to 1 to save space by omitting the installation manual.
