update all-txt-tech.build.conf info to 10.6.2

--- a/isodvd/profiles/all-txt-tech.build.conf
+++ b/isodvd/profiles/all-txt-tech.build.conf
@@ -1,23 +1,32 @@
 mirror_components="main contrib non-free"
 
-debian_mirror_extra="https://cdtxylan/atzlinux/"
+debian_mirror_extra="http://cdtxy/atzlinux"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
 
 profiles="atzlinux-all-txt-tech"
 default_profiles='atzlinux-all-txt-tech'
+auto-profiles='atzlinux-all-txt-tech'
 kernel_packages='linux-image-rt-amd64'
 
 backports="true"
-backports_packages='firmware-iwlwifi, firmware-linux-nonfree, firmware-amd-graphics, firmware-misc-nonfree, firmware-realtek'
+backports_packages='amd64-microcode, firmware-amd-graphics, firmware-iwlwifi, firmware-linux-free, firmware-linux-nonfree, firmware-misc-nonfree, firmware-realtek, intel-microcode,
+firmware-brcm80211,
+firmware-libertas,
+libdebhelper-perl,
+lintian,
+debhelper,
+e2fslibs,
+libcomerr2,
+tlp'
 
 BOOT_TIMEOUT=28
-export DISKINFO="atzlinux 10.4.1 buster 20200510"
+export DISKINFO="atzlinux 10.6.2 buster 20201011"
 export DEBFULLNAME='肖盛文'
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
-export DEBVERSION="10.4.1"
+export DEBVERSION="10.6.2"
 export CDNAME="atzlinux"
 
 # Set to 1 to save space by omitting the installation manual.
@@ -29,9 +38,12 @@ export OMIT_MANUAL=1
 export OMIT_RELEASE_NOTES=1
 
 # Set this to override the default location
-export RELEASE_NOTES_LOCATION="https://www.atzlinux.com/debian/download/changelog.txt"
+export RELEASE_NOTES_LOCATION="https://www.atzlinux.com/News/"
 
 # Set to 1 to not include the doc/tools directories on CD1
 # Useful to save space and avoids failures if you have a mirror
 # without those directories.
 export OMIT_DOC_TOOLS=1
+
+export DISKINFO_DISTRO="atzlinux txt-tech"
+export VOLID_BASE="atzlinux txt-tech $DEBVERSION"
