delete date in isodvd/profiles/amd64.build.conf

--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -20,7 +20,7 @@ libcomerr2,
 tlp'
 
 BOOT_TIMEOUT=28
-export DISKINFO="atzlinux 10.6.2 buster 20201010"
+export DISKINFO="atzlinux 10.6.2 buster"
 export DEBFULLNAME='肖盛文'
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
