use atzlinux-KDE iso name

--- a/isodvd/profiles/amd64-kde.build.conf
+++ b/isodvd/profiles/amd64-kde.build.conf
@@ -15,7 +15,7 @@ export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
 export DEBVERSION="10.6.2"
-export CDNAME="atzlinux"
+export CDNAME="atzlinux-KDE"
 mirror_components="main contrib non-free"
 
 kernel_packages='linux-image-rt-amd64'
@@ -48,5 +48,5 @@ export RELEASE_NOTES_LOCATION="https://www.atzlinux.com/News/"
 # without those directories.
 export OMIT_DOC_TOOLS=1
 
-export DISKINFO_DISTRO="atzlinux"
-export VOLID_BASE="atzlinux $DEBVERSION"
+export DISKINFO_DISTRO="atzlinux KDE"
+export VOLID_BASE="atzlinux KDE $DEBVERSION"
