--- a/isodvd/profiles/mini-test.build.conf
+++ b/isodvd/profiles/mini-test.build.conf
@@ -1,12 +1,13 @@
 mirror_components="main contrib non-free"
 
-debian_mirror_extra="http://cdtxy/atzlinux"
+#debian_mirror_extra="https://cdtxy/atzlinux"
+debian_mirror_extra="https://apt.atzlinux.com/atzlinux"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
 
 profiles="mini-test"
 default_profiles='mini-test'
-kernel_packages='linux-image-rt-amd64'
+kernel_packages='linux-image-rt-amd64, linux-image-5.9.0-0.bpo.2-rt-amd64-unsigned'
 
 backports="true"
 backports_packages='amd64-microcode, firmware-amd-graphics, firmware-iwlwifi, firmware-linux-free, firmware-linux-nonfree, firmware-misc-nonfree, firmware-realtek, intel-microcode,
@@ -17,6 +18,7 @@ lintian,
 debhelper,
 e2fslibs,
 libcomerr2,
+linux-image-5.9.0-0.bpo.2-rt-amd64-unsigned,
 tlp'
 
 BOOT_TIMEOUT=28
@@ -25,8 +27,11 @@ export DEBFULLNAME='肖盛文'
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
-export DEBVERSION="10.6.2"
+export DEBVERSION="10.7.1"
 export CDNAME="atzlinux"
+
+export extra_udeb_dist='buster-proposed-updates'
+export CODENAME=buster
 
 # Set to 1 to save space by omitting the installation manual.
 # If so the README will link to the manual on the web site.
@@ -46,3 +51,7 @@ export OMIT_DOC_TOOLS=1
 
 export DISKINFO_DISTRO="atzlinux"
 export VOLID_BASE="atzlinux $DEBVERSION"
+# custom debian-installer images to use. must contain one sub-directory for
+# each architecture.
+custom_installer="/home/atzlinux/isodvd/tmp/mirror/dists/buster-proposed-updates/main"
+
