--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -7,7 +7,7 @@ keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/at
 
 profiles="atzlinux-all-txt-tech atzlinux-amd64-xfce-mini atzlinux-amd64-xfce atzlinux-amd64-xall atzlinux-amd64-kde"
 default_profiles='atzlinux-amd64-xfce'
-kernel_packages='linux-image-rt-amd64, linux-image-5.9.0-0.bpo.2-rt-amd64-unsigned'
+kernel_packages='linux-image-rt-amd64, linux-image-5.9.0-0.bpo.2-rt-amd64'
 
 backports="true"
 backports_packages='amd64-microcode, firmware-amd-graphics, firmware-iwlwifi, firmware-linux-free, firmware-linux-nonfree, firmware-misc-nonfree, firmware-realtek, intel-microcode,
@@ -19,7 +19,7 @@ debhelper,
 e2fslibs,
 libcomerr2,
 systemd, systemd-sysv, udev
-linux-image-5.9.0-0.bpo.2-rt-amd64-unsigned,
+linux-image-5.9.0-0.bpo.2-rt-amd64,
 tlp'
 
 BOOT_TIMEOUT=28
@@ -49,8 +49,3 @@ export OMIT_DOC_TOOLS=1
 
 export DISKINFO_DISTRO="atzlinux"
 export VOLID_BASE="atzlinux $DEBVERSION"
-
-# custom debian-installer images to use. must contain one sub-directory for
-# each architecture.
-custom_installer="/home/atzlinux/isodvd/tmp/mirror/dists/buster-proposed-updates/main"
-export extra_udeb_dist='buster-proposed-updates'
