amd64.build.conf add export FORCE_FIRMWARE=1 all fw pkg use bpo

--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -1,6 +1,5 @@
 mirror_components="main contrib non-free"
 
-#debian_mirror_extra="http://cdtxy/atzlinux"
 debian_mirror_extra="https://apt.atzlinux.com/atzlinux"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
@@ -10,9 +9,42 @@ default_profiles='atzlinux-amd64-xfce'
 kernel_packages='linux-image-rt-amd64, linux-image-5.9.0-0.bpo.2-rt-amd64'
 
 backports="true"
-backports_packages='amd64-microcode, firmware-amd-graphics, firmware-iwlwifi, firmware-linux-free, firmware-linux-nonfree, firmware-misc-nonfree, firmware-realtek, intel-microcode,
+backports_packages='
+firmware-b43-installer,
+firmware-b43legacy-installer,
+firmware-linux-free,
+hdmi2usb-fx2-firmware,
+firmware-ath9k-htc,
+amd64-microcode,
+atmel-firmware,
+bluez-firmware,
+dahdi-firmware-nonfree,
+firmware-amd-graphics,
+firmware-atheros,
+firmware-bnx2,
+firmware-bnx2x,
 firmware-brcm80211,
+firmware-cavium,
+firmware-intel-sound,
+firmware-intelwimax,
+firmware-ipw2x00,
+firmware-ivtv,
+firmware-iwlwifi,
 firmware-libertas,
+firmware-misc-nonfree,
+firmware-myricom,
+firmware-netronome,
+firmware-netxen,
+firmware-qcom-media,
+firmware-qlogic,
+firmware-realtek,
+firmware-samsung,
+firmware-siano,
+firmware-ti-connectivity,
+intel-microcode,
+firmware-zd1211,
+amd64-microcode,
+intel-microcode,
 libdebhelper-perl,
 lintian,
 debhelper,
@@ -46,6 +78,11 @@ export RELEASE_NOTES_LOCATION="https://www.atzlinux.com/News/"
 # Useful to save space and avoids failures if you have a mirror
 # without those directories.
 export OMIT_DOC_TOOLS=1
+
+# Do I want to force (potentially non-free) firmware packages to be
+# placed on disc 1? Will make installation much easier if systems
+# contain hardware that depends on this firmware
+export FORCE_FIRMWARE=1
 
 export DISKINFO_DISTRO="atzlinux"
 export VOLID_BASE="atzlinux $DEBVERSION"
