mini-test.build.conf export FORCE_FIRMWARE=1 所有固件包使用 backports

--- a/isodvd/profiles/mini-test.build.conf
+++ b/isodvd/profiles/mini-test.build.conf
@@ -10,15 +10,49 @@ default_profiles='mini-test'
 kernel_packages='linux-image-rt-amd64, linux-image-5.9.0-0.bpo.2-rt-amd64-unsigned'
 
 backports="true"
-backports_packages='amd64-microcode, firmware-amd-graphics, firmware-iwlwifi, firmware-linux-free, firmware-linux-nonfree, firmware-misc-nonfree, firmware-realtek, intel-microcode,
+backports_packages='
+firmware-b43-installer,
+firmware-b43legacy-installer,
+firmware-linux-free,
+hdmi2usb-fx2-firmware,
+firmware-ath9k-htc,
+amd64-microcode,
+atmel-firmware,
+bluez-firmware,
+dahdi-firmware-nonfree,
+firmware-amd-graphics,
+firmware-atheros,
+firmware-bnx2,
+firmware-bnx2x,
 firmware-brcm80211,
+firmware-cavium,
+firmware-intel-sound,
+firmware-intelwimax,
+firmware-ipw2x00,
+firmware-ivtv,
+firmware-iwlwifi,
 firmware-libertas,
+firmware-misc-nonfree,
+firmware-myricom,
+firmware-netronome,
+firmware-netxen,
+firmware-qcom-media,
+firmware-qlogic,
+firmware-realtek,
+firmware-samsung,
+firmware-siano,
+firmware-ti-connectivity,
+intel-microcode,
+firmware-zd1211,
+amd64-microcode,
+intel-microcode,
 libdebhelper-perl,
 lintian,
 debhelper,
 e2fslibs,
 libcomerr2,
-linux-image-5.9.0-0.bpo.2-rt-amd64-unsigned,
+systemd, systemd-sysv, udev
+linux-image-5.9.0-0.bpo.2-rt-amd64,
 tlp'
 
 BOOT_TIMEOUT=28
@@ -30,7 +64,7 @@ export ARCHES="amd64"
 export DEBVERSION="10.7.1"
 export CDNAME="atzlinux"
 
-export extra_udeb_dist='buster-proposed-updates'
+#export extra_udeb_dist='proposed-updates'
 export CODENAME=buster
 
 # Set to 1 to save space by omitting the installation manual.
@@ -49,9 +83,13 @@ export RELEASE_NOTES_LOCATION="https://www.atzlinux.com/News/"
 # without those directories.
 export OMIT_DOC_TOOLS=1
 
+# Do I want to force (potentially non-free) firmware packages to be
+# placed on disc 1? Will make installation much easier if systems
+# contain hardware that depends on this firmware
+export FORCE_FIRMWARE=1
+
 export DISKINFO_DISTRO="atzlinux"
 export VOLID_BASE="atzlinux $DEBVERSION"
 # custom debian-installer images to use. must contain one sub-directory for
 # each architecture.
-custom_installer="/home/atzlinux/isodvd/tmp/mirror/dists/buster-proposed-updates/main"
-
+#custom_installer="/home/atzlinux/isodvd/tmp/mirror/dists/proposed-updates/main"
