mini-test.build.conf: fix typo; kernel_packages use rt signed

--- a/isodvd/profiles/mini-test.build.conf
+++ b/isodvd/profiles/mini-test.build.conf
@@ -7,7 +7,7 @@ keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/at
 
 profiles="mini-test"
 default_profiles='mini-test'
-kernel_packages='linux-image-rt-amd64, linux-image-5.9.0-0.bpo.2-rt-amd64-unsigned'
+kernel_packages='linux-image-rt-amd64, linux-image-5.9.0-0.bpo.2-rt-amd64'
 
 backports="true"
 backports_packages='
@@ -51,7 +51,7 @@ lintian,
 debhelper,
 e2fslibs,
 libcomerr2,
-systemd, systemd-sysv, udev
+systemd, systemd-sysv, udev,
 linux-image-5.9.0-0.bpo.2-rt-amd64,
 tlp'
 
