amd64.build.conf: bpo add firmware-linux-nonfree

--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -13,6 +13,7 @@ backports_packages='
 firmware-b43-installer,
 firmware-b43legacy-installer,
 firmware-linux-free,
+firmware-linux-nonfree,
 hdmi2usb-fx2-firmware,
 firmware-ath9k-htc,
 amd64-microcode,
@@ -50,7 +51,7 @@ lintian,
 debhelper,
 e2fslibs,
 libcomerr2,
-systemd, systemd-sysv, udev
+systemd, systemd-sysv, udev,
 linux-image-5.9.0-0.bpo.2-rt-amd64,
 tlp'
 
