mini-test.build.conf: bpo add firmware-linux-nonfree

--- a/isodvd/profiles/mini-test.build.conf
+++ b/isodvd/profiles/mini-test.build.conf
@@ -14,6 +14,7 @@ backports_packages='
 firmware-b43-installer,
 firmware-b43legacy-installer,
 firmware-linux-free,
+firmware-linux-nonfree,
 hdmi2usb-fx2-firmware,
 firmware-ath9k-htc,
 amd64-microcode,
