--- a/isodvd/profiles/mini-test.build.conf
+++ b/isodvd/profiles/mini-test.build.conf
@@ -48,6 +48,7 @@ firmware-zd1211,
 amd64-microcode,
 intel-microcode,
 linux-image-5.9.0-0.bpo.2-rt-amd64,
+libdebhelper-perl,
 '
 
 BOOT_TIMEOUT=28
