--- a/isodvd/profiles/mini-test.build.conf
+++ b/isodvd/profiles/mini-test.build.conf
@@ -37,7 +37,7 @@ firmware-misc-nonfree,
 firmware-myricom,
 firmware-netronome,
 firmware-netxen,
-firmware-qcom-media,
+firmware-qcom-soc,
 firmware-qlogic,
 firmware-realtek,
 firmware-samsung,
