bpo: +libdebhelper-perl,debhelper,+lintian, 用户 deb 软件包开发的工具软件包； +tlp, 笔记本节能软件包

--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -47,7 +47,9 @@ firmware-zd1211,
 amd64-microcode,
 intel-microcode,
 linux-image-5.9.0-0.bpo.2-rt-amd64,
-libdebhelper-perl,
+libdebhelper-perl,debhelper,
+lintian,
+tlp,
 '
 
 BOOT_TIMEOUT=28
