+e2fslibs,+libcomerr2, 理由同上

--- a/isodvd/profiles/mini-test.build.conf
+++ b/isodvd/profiles/mini-test.build.conf
@@ -49,6 +49,8 @@ amd64-microcode,
 intel-microcode,
 linux-image-5.9.0-0.bpo.2-rt-amd64,
 libdebhelper-perl,
+e2fslibs,
+libcomerr2,
 '
 
 BOOT_TIMEOUT=28
