调整版本显示顺序，默认安装的 xfce 完整版，第一个显示

--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -4,7 +4,7 @@ debian_mirror_extra="https://apt.atzlinux.com/atzlinux"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
 
-profiles="atzlinux-all-txt-tech atzlinux-amd64-xfce-mini atzlinux-amd64-xfce atzlinux-amd64-xall atzlinux-amd64-kde"
+profiles="atzlinux-amd64-xfce atzlinux-amd64-xall atzlinux-amd64-kde atzlinux-amd64-xfce-mini atzlinux-all-txt-tech"
 default_profiles='atzlinux-amd64-xfce'
 kernel_packages='linux-image-rt-amd64, linux-image-5.9.0-0.bpo.2-rt-amd64'
 
