amd64-xfce.build.conf update to 10.8.1

--- a/isodvd/profiles/amd64-xfce.build.conf
+++ b/isodvd/profiles/amd64-xfce.build.conf
@@ -7,10 +7,10 @@ keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/at
 profiles="atzlinux-amd64-xfce" 
 
 BOOT_TIMEOUT=50
-export DISKINFO="atzlinux amd64 xfce 10.2.1 buster 20191208"
+export DISKINFO="atzlinux amd64 xfce 10.8.1 buster"
 export DEBFULLNAME='肖盛文'
 export ARCHES="amd64"
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
-export DEBVERSION="10.2.1"
+export DEBVERSION="10.8.1"
