--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -47,6 +47,7 @@ firmware-zd1211,
 amd64-microcode,
 intel-microcode,
 linux-image-5.9.0-0.bpo.5-rt-amd64,
+dwz,
 libdebhelper-perl,debhelper,
 lintian,
 e2fslibs,
