--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -1,12 +1,12 @@
 mirror_components="main contrib non-free"
 
-debian_mirror_extra="https://apt.atzlinux.com/atzlinux"
+debian_mirror_extra="https://www.atzlinux.com/atzlinux"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
 
 profiles="atzlinux-amd64-xfce atzlinux-amd64-xall atzlinux-amd64-kde atzlinux-amd64-xfce-mini atzlinux-all-txt-tech"
 default_profiles='atzlinux-amd64-xfce'
-kernel_packages='linux-image-rt-amd64, linux-image-5.9.0-0.bpo.5-rt-amd64'
+kernel_packages='linux-image-rt-amd64, linux-image-5.10.0-0.bpo.4-rt-amd64-unsigned'
 
 backports="true"
 backports_packages='
@@ -46,7 +46,7 @@ intel-microcode,
 firmware-zd1211,
 amd64-microcode,
 intel-microcode,
-linux-image-5.9.0-0.bpo.5-rt-amd64,
+linux-image-5.10.0-0.bpo.4-rt-amd64-unsigned,
 dwz,
 libdebhelper-perl,debhelper,
 lintian,
