update amd64.build.conf, add wireless-regdb to bpo
Signed-off-by: xiao sheng wen(肖盛文) <atzlinux@sina.com>

--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -2,11 +2,11 @@ mirror_components="main contrib non-free"
 
 debian_mirror_extra="https://www.atzlinux.com/atzlinux"
 mirror_components_extra="main contrib non-free"
-keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
+keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-v10.gpg
 
 profiles="atzlinux-amd64-xfce atzlinux-amd64-xall atzlinux-amd64-kde atzlinux-amd64-xfce-mini atzlinux-all-txt-tech"
 default_profiles='atzlinux-amd64-xfce'
-kernel_packages='linux-image-rt-amd64, linux-image-5.10.0-0.bpo.4-rt-amd64-unsigned'
+kernel_packages='linux-image-rt-amd64, linux-image-5.10.0-0.bpo.5-rt-amd64'
 
 backports="true"
 backports_packages='
@@ -45,7 +45,8 @@ firmware-ti-connectivity,
 firmware-zd1211,
 hdmi2usb-fx2-firmware,
 intel-microcode,
-linux-image-5.10.0-0.bpo.4-rt-amd64-unsigned,
+linux-image-5.10.0-0.bpo.5-rt-amd64,
+wireless-regdb,
 dwz,
 libdebhelper-perl,debhelper,
 lintian,
@@ -53,12 +54,12 @@ tlp,
 '
 
 BOOT_TIMEOUT=28
-export DISKINFO="atzlinux 10.9.1 buster"
+export DISKINFO="atzlinux 10.9.2 buster"
 export DEBFULLNAME='肖盛文'
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
-export DEBVERSION="10.9.1"
+export DEBVERSION="10.9.2"
 export CDNAME="atzlinux"
 
 # Set to 1 to save space by omitting the installation manual.
