--- a/isodvd/profiles/mini-test.build.conf
+++ b/isodvd/profiles/mini-test.build.conf
@@ -3,7 +3,7 @@ mirror_components="main contrib non-free"
 #debian_mirror_extra="https://cdtxy/atzlinux"
 debian_mirror_extra="https://apt.atzlinux.com/atzlinux"
 mirror_components_extra="main contrib non-free"
-keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
+keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-v10.gpg
 
 profiles="mini-test"
 default_profiles='mini-test'
@@ -57,7 +57,7 @@ export DEBFULLNAME='肖盛文'
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
-export DEBVERSION="10.9.1"
+export DEBVERSION="10.9.2"
 export CDNAME="atzlinux"
 
 #export extra_udeb_dist='proposed-updates'
