--- a/isodvd/profiles/mini-test.build.conf
+++ b/isodvd/profiles/mini-test.build.conf
@@ -7,7 +7,7 @@ keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/at
 
 profiles="mini-test"
 default_profiles='mini-test'
-kernel_packages='linux-image-rt-amd64, linux-image-5.10.0-0.bpo.4-rt-amd64-unsigned'
+kernel_packages='linux-image-rt-amd64, linux-image-5.10.0-0.bpo.5-rt-amd64'
 
 backports="true"
 backports_packages='
@@ -47,7 +47,7 @@ intel-microcode,
 firmware-zd1211,
 amd64-microcode,
 intel-microcode,
-linux-image-5.10.0-0.bpo.4-rt-amd64-unsigned,
+linux-image-5.10.0-0.bpo.5-rt-amd64,
 libdebhelper-perl,
 '
 
