--- a/isodvd/profiles/mini-test.build.conf
+++ b/isodvd/profiles/mini-test.build.conf
@@ -7,6 +7,7 @@ keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/at
 
 profiles="mini-test"
 default_profiles='mini-test'
+auto-profiles='mini-test'
 kernel_packages='linux-image-rt-amd64, linux-image-5.10.0-0.bpo.5-rt-amd64'
 
 backports="true"
