--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -1,6 +1,6 @@
 mirror_components="main contrib non-free"
 
-debian_mirror_extra="https://www.atzlinux.com/atzlinux"
+debian_mirror_extra="http://txy.atzlinux.com/atzlinux"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-v10.gpg
 
