--- a/isodvd/profiles/mini-test.build.conf
+++ b/isodvd/profiles/mini-test.build.conf
@@ -1,7 +1,7 @@
 mirror_components="main contrib non-free"
 
 #debian_mirror_extra="https://cdtxy/atzlinux"
-debian_mirror_extra="https://apt.atzlinux.com/atzlinux"
+debian_mirror_extra="http://txy.atzlinux.com/atzlinux"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-v10.gpg
 
