--- a/isodvd/profiles/amd64-txt-tech.build.conf
+++ b/isodvd/profiles/amd64-txt-tech.build.conf
@@ -4,9 +4,9 @@ debian_mirror_extra="http://cdtxy/atzlinux"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-2019.gpg
 
-profiles="atzlinux-all-txt-tech"
-default_profiles='atzlinux-all-txt-tech'
-auto-profiles='atzlinux-all-txt-tech'
+profiles="atzlinux-amd64-txt-tech"
+default_profiles='atzlinux-amd64-txt-tech'
+auto-profiles='atzlinux-amd64-txt-tech'
 kernel_packages='linux-image-rt-amd64'
 
 backports="true"
