update codename to bullseye
Signed-off-by: xiao sheng wen(肖盛文) <atzlinux@sina.com>

--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -55,7 +55,7 @@ tlp-rdw,
 '
 
 BOOT_TIMEOUT=28
-export DISKINFO="atzlinux 11.4.1 buster"
+export DISKINFO="atzlinux 11.4.1 bullseye"
 export DEBFULLNAME='肖盛文'
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
