stardict flameshot use bpo
Signed-off-by: xiao sheng wen(肖盛文) <atzlinux@sina.com>

--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -52,6 +52,13 @@ libdebhelper-perl,debhelper,
 lintian,
 tlp,
 tlp-rdw,
+flameshot,
+stardict,
+stardict-common,
+stardict-gtk,
+stardict-plugin-spell,
+stardict-plugin-espeak,
+stardict-plugin-festival,
 '
 
 BOOT_TIMEOUT=28
