--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -67,7 +67,7 @@ export DEBFULLNAME='肖盛文'
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
-export DEBVERSION="11.4.1"
+export DEBVERSION="11.4.1-rc2"
 export CDNAME="atzlinux"
 
 # Set to 1 to save space by omitting the installation manual.
