--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -1,6 +1,6 @@
 mirror_components="main contrib non-free"
 
-debian_mirror_extra="https://apt.atzlinux.com/atzlinux"
+debian_mirror_extra="http://a11test.atzlinux.com/atzlinux/"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-v11.gpg
 
@@ -62,12 +62,12 @@ stardict-plugin-festival,
 '
 
 BOOT_TIMEOUT=28
-export DISKINFO="atzlinux 11.4.1 bullseye"
+export DISKINFO="atzlinux 11.5.1 bullseye"
 export DEBFULLNAME='肖盛文'
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
-export DEBVERSION="11.4.1-rc2"
+export DEBVERSION="11.5.1"
 export CDNAME="atzlinux"
 
 # Set to 1 to save space by omitting the installation manual.
