--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -6,7 +6,7 @@ keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/at
 
 profiles="atzlinux-amd64-xfce atzlinux-amd64-xall atzlinux-amd64-kde atzlinux-amd64-xfce-mini atzlinux-amd64-txt-tech"
 default_profiles='atzlinux-amd64-xfce'
-kernel_packages='linux-image-rt-amd64, linux-image-5.18.0-0.bpo.1-rt-amd64'
+kernel_packages='linux-image-rt-amd64, linux-image-5.18.0-0.deb11.4-rt-amd64'
 
 backports="true"
 backports_packages='
@@ -45,7 +45,7 @@ firmware-ti-connectivity,
 firmware-zd1211,
 hdmi2usb-fx2-firmware,
 intel-microcode,
-linux-image-5.18.0-0.bpo.1-rt-amd64,
+linux-image-5.18.0-0.deb11.4-rt-amd64,
 wireless-regdb,
 dwz,
 libdebhelper-perl,debhelper,
