--- a/isodvd/profiles/mini-test.build.conf
+++ b/isodvd/profiles/mini-test.build.conf
@@ -1,13 +1,13 @@
 mirror_components="main contrib non-free"
 
-debian_mirror_extra="https://apt.atzlinux.com/atzlinux"
+debian_mirror_extra="http://a11test.atzlinux.com/atzlinux/"
 mirror_components_extra="main contrib non-free"
-keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-v10.gpg
+keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-v11.gpg
 
 profiles="mini-test"
 default_profiles='mini-test'
 auto-profiles='mini-test'
-kernel_packages='linux-image-rt-amd64, linux-image-5.10.0-0.bpo.8-rt-amd64'
+kernel_packages='linux-image-rt-amd64'
 
 backports="true"
 backports_packages='
@@ -47,21 +47,17 @@ intel-microcode,
 firmware-zd1211,
 amd64-microcode,
 intel-microcode,
-linux-image-5.10.0-0.bpo.8-rt-amd64,
 libdebhelper-perl,
 '
 
 BOOT_TIMEOUT=28
-export DISKINFO="atzlinux buster mini-test"
+export DISKINFO="atzlinux 11.5.2 mini-test"
 export DEBFULLNAME='肖盛文'
-export MAXJIGDOS=ALL
+#export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
-export DEBVERSION="10.10.1"
+export DEBVERSION="11.5.1"
 export CDNAME="atzlinux"
-
-#export extra_udeb_dist='proposed-updates'
-export CODENAME=buster
 
 # Set to 1 to save space by omitting the installation manual.
 # If so the README will link to the manual on the web site.
