add export CODENAME=bullseye
Signed-off-by: xiao sheng wen(肖盛文) <atzlinux@sina.com>

--- a/isodvd/profiles/mini-test.build.conf
+++ b/isodvd/profiles/mini-test.build.conf
@@ -59,6 +59,8 @@ export ARCHES="amd64"
 export DEBVERSION="11.5.1"
 export CDNAME="atzlinux"
 
+export CODENAME="bullseye"
+
 # Set to 1 to save space by omitting the installation manual.
 # If so the README will link to the manual on the web site.
 export OMIT_MANUAL=1
