--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -63,12 +63,12 @@ stardict-plugin-festival,
 '
 
 BOOT_TIMEOUT=28
-export DISKINFO="atzlinux 11.5.1 bullseye"
+export DISKINFO="atzlinux 11.5.3 bullseye"
 export DEBFULLNAME='肖盛文'
-export MAXJIGDOS=ALL
+#export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
-export DEBVERSION="11.5.1"
+export DEBVERSION="11.5.3rc1"
 export CDNAME="atzlinux"
 
 # Set to 1 to save space by omitting the installation manual.
