remove -firmware-linux-nonfree, meta package,useless
Signed-off-by: xiao sheng wen(肖盛文) <atzlinux@sina.com>

--- a/isodvd/profiles/amd64-kde.build.conf
+++ b/isodvd/profiles/amd64-kde.build.conf
@@ -21,7 +21,7 @@ mirror_components="main contrib non-free"
 kernel_packages='linux-image-rt-amd64'
 
 backports="true"
-backports_packages='amd64-microcode, firmware-amd-graphics, firmware-iwlwifi, firmware-linux-free, firmware-linux-nonfree, firmware-misc-nonfree, firmware-realtek, intel-microcode,
+backports_packages='amd64-microcode, firmware-amd-graphics, firmware-iwlwifi, firmware-linux-free, firmware-misc-nonfree, firmware-realtek, intel-microcode,
 firmware-brcm80211,
 firmware-libertas,
 libdebhelper-perl,
