--- a/isodvd/profiles/amd64-txt-tech.build.conf
+++ b/isodvd/profiles/amd64-txt-tech.build.conf
@@ -10,7 +10,7 @@ auto-profiles='atzlinux-amd64-txt-tech'
 kernel_packages='linux-image-rt-amd64'
 
 backports="true"
-backports_packages='amd64-microcode, firmware-amd-graphics, firmware-iwlwifi, firmware-linux-free, firmware-linux-nonfree, firmware-misc-nonfree, firmware-realtek, intel-microcode,
+backports_packages='amd64-microcode, firmware-amd-graphics, firmware-iwlwifi, firmware-linux-free, firmware-misc-nonfree, firmware-realtek, intel-microcode,
 firmware-brcm80211,
 firmware-libertas,
 libdebhelper-perl,
