export JIGDO_CHECKSUM=md5
Signed-off-by: xiao sheng wen(肖盛文) <atzlinux@sina.com>

--- a/isodvd/profiles/mini-test.build.conf
+++ b/isodvd/profiles/mini-test.build.conf
@@ -50,7 +50,8 @@ libdebhelper-perl,
 BOOT_TIMEOUT=28
 export DISKINFO="atzlinux 11.5.2 mini-test"
 export DEBFULLNAME='肖盛文'
-#export MAXJIGDOS=ALL
+export JIGDO_CHECKSUM="md5"
+export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
 export DEBVERSION="11.5.1"
