export JIGDO_CHECKSUM=md5
Signed-off-by: xiao sheng wen(肖盛文) <atzlinux@sina.com>

--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -21,7 +21,8 @@ webp-pixbuf-loader,
 BOOT_TIMEOUT=28
 export DISKINFO="atzlinux 11.5.3 bullseye"
 export DEBFULLNAME='肖盛文'
-#export MAXJIGDOS=ALL
+export JIGDO_CHECKSUM="md5"
+export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
 export DEBVERSION="11.5.3rc1"
