stardict use bpo
Signed-off-by: xiao sheng wen(肖盛文) <atzlinux@sina.com>

--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -16,6 +16,7 @@ tlp,
 tlp-rdw,
 flameshot,
 webp-pixbuf-loader,
+stardict,stardict-common,stardict-gtk,stardict-plugin-espeak,stardict-plugin-festival,
 '
 
 BOOT_TIMEOUT=38
