add +scrcpy-server to bpo
Signed-off-by: xiao sheng wen(肖盛文) <atzlinux@sina.com>

--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -17,6 +17,7 @@ tlp-rdw,
 flameshot,
 webp-pixbuf-loader,
 stardict,stardict-common,stardict-gtk,stardict-plugin-espeak,stardict-plugin-festival,
+scrcpy-server,
 scrcpy,
 '
 
