--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -28,7 +28,7 @@ export JIGDO_CHECKSUM="md5"
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
-export DEBVERSION="11.6.1rc1"
+export DEBVERSION="11.6.1"
 export CDNAME="atzlinux"
 
 # Set to 1 to save space by omitting the installation manual.
