--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -19,6 +19,7 @@ webp-pixbuf-loader,
 stardict,stardict-common,stardict-gtk,stardict-plugin-espeak,stardict-plugin-festival,
 scrcpy-server,
 scrcpy,
+opengnb,
 '
 
 BOOT_TIMEOUT=38
