--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -23,13 +23,13 @@ opengnb,
 '
 
 BOOT_TIMEOUT=38
-export DISKINFO="atzlinux 11.6.1 bullseye"
+export DISKINFO="atzlinux 11.6.3 bullseye"
 export DEBFULLNAME='肖盛文'
 export JIGDO_CHECKSUM="md5"
 export MAXJIGDOS=ALL
 export CHECKSUMS="md5 sha1 sha512 sha256"
 export ARCHES="amd64"
-export DEBVERSION="11.6.1"
+export DEBVERSION="11.6.3rc1"
 export CDNAME="atzlinux"
 
 # Set to 1 to save space by omitting the installation manual.
