add radeontop to bpo list
Signed-off-by: xiao sheng wen(肖盛文) <atzlinux@sina.com>

--- a/isodvd/profiles/amd64.build.conf
+++ b/isodvd/profiles/amd64.build.conf
@@ -1,6 +1,6 @@
 mirror_components="main contrib non-free"
 
-debian_mirror_extra="http://a11test.atzlinux.com/atzlinux/"
+debian_mirror_extra="https://apt.atzlinux.com/atzlinux/"
 mirror_components_extra="main contrib non-free"
 keyring=/usr/share/keyrings/debian-archive-keyring.gpg,/etc/apt/trusted.gpg.d/atzlinux-archive-v11.gpg
 
@@ -12,6 +12,7 @@ backports="true"
 backports_packages='
 libdebhelper-perl,debhelper,
 lintian,
+radeontop,
 tlp,
 tlp-rdw,
 flameshot,
